<resources>
    <string name="app_name">NaviCalculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tô Đức Hiệp 20194278</string>
    <string name="nav_header_subtitle">hiep.td194278@sis.hust.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_calculator">Calculator</string>
    <string name="menu_base">Base Converter</string>
    <string name="menu_unit">Unit Converter</string>

    <string name="result">Name</string>
    <string name="result_symbol">Result:</string>
    <string name="Convert_symbol">Convert:</string>
    <string name="enterNumber">Name</string>
    <string name="from_base">From base:</string>
    <string name="to_base">to base:</string>
    <string name="convert_button">Convert</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="change_sign">+/-</string>
    <string name="point">.</string>

    <string name="display1">et1</string>
    <string name="display2">et2</string>
    <string name="backspace">1</string>

    <string name="result1">Name</string>
    <string name="result_symbol1">Result:</string>
    <string name="Convert_symbol1">Convert:</string>
    <string name="enterNumber1">Name</string>
    <string name="from_base1">From unit:</string>
    <string name="to_base1">to unit:</string>
    <string name="convert_button1">Convert</string>
</resources>