<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_gravity="center_vertical"
    android:background="#DFDCDC"
    android:foregroundGravity="center_vertical"
    app:layout_anchorGravity="clip_vertical"
    tools:context=".ui.calculator.CalculatorFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/percent_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/percent"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/ce_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/ce"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/c_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/c"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/divide_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/divide"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/seven"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/eight_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/eight"
                android:textColor="#000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/nine_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/nine"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/multiply_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/multiply"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/four"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/five_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/five"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/six_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/six"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/subtract_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/subtract"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/one"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/two_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/two"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/three_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/three"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/plus_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/plus"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/change_sign_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/change_sign"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/zero_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/point_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/point"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/equal_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:text="@string/equal"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:backgroundTint="#096A6A" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="#FFFFFF"
        android:cursorVisible="false"
        android:inputType="none"
        android:minHeight="32dp"
        android:text="@string/display1"
        android:textAlignment="textEnd"
        android:textColorHint="#8E8A8A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="#FFFFFF"
        android:cursorVisible="false"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/display2"
        android:textAlignment="textEnd"
        android:textColorHint="#A3A1A1"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/backspace_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="@drawable/round"
        android:contentDescription="@string/backspace"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backspace"
        app:tint="#000000" />
</androidx.constraintlayout.widget.ConstraintLayout>